<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.mydesign2.Activity.MainActivity">


    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/whitesmoke"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="NotSibling">
        <!-- tab的四个按钮 -->
        <!-- 首页按钮 -->
        <!-- 使用FrameLayout，最主要的原因是使用它可以很容易的再添加一个消息提醒的小图片 -->
        <FrameLayout
            android:id="@+id/shouyeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/shouyeImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:src="@drawable/tabshouye_dr" />

            <TextView
                android:id="@+id/shouyeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/shouye"
                android:textSize="13sp" />

        </FrameLayout>

        <!-- 推荐按钮 -->
        <FrameLayout
            android:id="@+id/tuijianLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/tuijianImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:src="@drawable/tabtuijian" />

            <TextView
                android:id="@+id/tuijianTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/tuijian"
                android:textColor="#999999"
                android:textSize="13sp" />
        </FrameLayout>

        <!-- 订单按钮 -->
        <FrameLayout
            android:id="@+id/dingdanLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/dingdanImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:src="@drawable/tabdingdan" />

            <TextView
                android:id="@+id/dingdanTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/dingdan"
                android:textColor="#999999"
                android:textSize="13sp" />
        </FrameLayout>

        <!-- 我的按钮 -->
        <FrameLayout
            android:id="@+id/meLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingBottom="2dp"
            android:paddingTop="3dp">

            <ImageView
                android:id="@+id/meImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center"
                android:src="@drawable/tabme" />

            <TextView
                android:id="@+id/meTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/me"
                android:textColor="#999999"
                android:textSize="13sp" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">



    </FrameLayout>

</RelativeLayout>
