<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.mydesign2.Activity.MeActivity">

    <LinearLayout
        android:id="@+id/me_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/me"

            android:textSize="10pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingLeft="@dimen/fab_margin"
                android:src="@drawable/head" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/fab_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6sp"
                    android:paddingTop="5sp"
                    android:text="@string/client"
                    android:textSize="10pt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80pt"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textSize="10pt" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/direction" />

                </LinearLayout>
            </LinearLayout>

            </LinearLayout>



        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />

        <!--收货地址-->
        <LinearLayout
            android:id="@+id/adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingTop="@dimen/fab_margin"
                android:src="@drawable/adress" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:text="收货地址"
                android:textSize="9pt" />

        </LinearLayout>
        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />

        <!--收藏-->
        <LinearLayout
            android:id="@+id/collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/fab_margin"
                android:src="@drawable/select" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:text="我的收藏"
                android:textSize="9pt" />

        </LinearLayout>

        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />

        <!--通知-->
        <LinearLayout
            android:id="@+id/inform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/fab_margin"
                android:src="@drawable/inform" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:text="通知"
                android:textSize="9pt" />

        </LinearLayout>

        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />

        <!--通用-->
        <LinearLayout
            android:id="@+id/usual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/fab_margin"
                android:src="@drawable/usual" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:text="通用"
                android:textSize="9pt" />

        </LinearLayout>

        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />

        <!--退出-->
        <LinearLayout
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/fab_margin"
                android:src="@drawable/exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:text="退出登录"
                android:textSize="9pt" />

        </LinearLayout>
        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />
        <!--商家加盟-->
        <LinearLayout
            android:id="@+id/bussness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:paddingTop="@dimen/fab_margin"
                android:src="@drawable/shoplogin" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/fab_margin"
                android:text="商家加盟"
                android:textSize="9pt" />
        </LinearLayout>
        <!--灰色分各行-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="@color/gainsboro" />

    </LinearLayout>

</ScrollView>
